# monipy

./: README.md  pyproject.toml
.github/workflows/: main.yml
monipy/: __init__.py  __version__.py  app.py  collectors.py  databases.py  main.py
monipy/templates/: index.html.jinja
tests/: test_integration.py
