[tool.poetry]
name = "monipy"
version = "0.1.0"
description = "Web-dashboard for resource monitoring data.."
license = "MIT"
authors = ["kpj <kim.philipp.jablonski@gmail.com>"]
readme = "README.md"
repository = "https://github.com/kpj/monipy"

[tool.poetry.dependencies]
python = "^3.8.0"

[tool.poetry.dev-dependencies]
bump2version = "^1.0.1"
black = "^20.8b1"
pytest = "^6.2.1"
pytest-markdown = "^1.0.2"

[tool.black]
skip_string_normalization = true
