[tool.poetry]
name = "monipy"
version = "0.1.1"
description = "Web-dashboard for resource monitoring data."
license = "MIT"
authors = ["kpj <kim.philipp.jablonski@gmail.com>"]
readme = "README.md"
repository = "https://github.com/kpj/monipy"

[tool.poetry.dependencies]
python = "^3.8.0"
rrdtool = "^0.1.15"
pandas = "^1.2.4"
palettable = "^3.3.0"
loguru = ">=0.5.3,<0.7.0"
uvicorn = ">=0.13.4,<0.18.0"
fastapi = ">=0.63,<0.75"
Jinja2 = ">=2.11.3,<4.0.0"
natsort = ">=7.1.1,<9.0.0"

[tool.poetry.dev-dependencies]
bump2version = "^1.0.1"
black = "^22.1"
pytest = "^6.2.1"
pytest-markdown = "^1.0.2"

[tool.poetry.scripts]
monipy = "monipy:main"
